added h1 and extra text

--- a/index.html
+++ b/index.html
@@ -10,8 +10,13 @@
 </head>
 <body>
     <div class="container">
-        <h3>Enter all of your choices separated by a comma (',').
-            <br>press Enter when you are done. 
+        <h1>The Decision Maker</h1>
+        <h3>
+            Need help making a decision?
+            <br>
+            Enter all of your choices separated by a comma (',').
+            <br>
+            Press Enter when you are done. 
         </h3>
         <textarea placeholder="Enter choices here" id="textarea"></textarea>
         <div id="tags">
